[package]
name = "oreilly-concurrent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
futures = "0.3.17"
nix = "0.22.1"
signal-hook = "0.3.10"
tokio = { version = "1.11.0", features = ["full"] }
